; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_lambda-code.c_exit_phi_for_loop_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_lambda-code.c_exit_phi_for_loop_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loop = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@PHI_NODE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.loop*, i32)* @exit_phi_for_loop_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exit_phi_for_loop_p(%struct.loop* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.loop*, align 8
  %5 = alloca i32, align 4
  store %struct.loop* %0, %struct.loop** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @TREE_CODE(i32 %6)
  %8 = load i64, i64* @PHI_NODE, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %23, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @PHI_NUM_ARGS(i32 %11)
  %13 = icmp ne i32 %12, 1
  br i1 %13, label %23, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %5, align 4
  %16 = call i64 @bb_for_stmt(i32 %15)
  %17 = load %struct.loop*, %struct.loop** %4, align 8
  %18 = getelementptr inbounds %struct.loop, %struct.loop* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %16, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %14, %10, %2
  store i32 0, i32* %3, align 4
  br label %25

24:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @PHI_NUM_ARGS(i32) #1

declare dso_local i64 @bb_for_stmt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
